Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/DP_SAP_Foreign_Key__c.object-meta.xml
<CustomObject>
    <label>DP SAP Foreign Key</label>
    <nameField>
        <displayFormat>DPSAP-{00000}</displayFormat>
        <label>DP-SAP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DP SAP Foreign Key</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>