Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Account_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Assignment Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Assignment Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key</relationshipName>
    <type>Lookup</type>
</CustomField>