Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Credit_Control_Area__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Control Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit Control Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Credit Control Area)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key1</relationshipName>
    <type>Lookup</type>
</CustomField>