Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Cus_Pricing_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Cus_Pricing_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cus Pricing Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cus Pricing Procedure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Cus Pricing Procedure)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key3</relationshipName>
    <type>Lookup</type>
</CustomField>