Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivering Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Delivering Plant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Delivering Plant)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key4</relationshipName>
    <type>Lookup</type>
</CustomField>