Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DP SAP Foreign Key</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key</relationshipName>
    <type>Lookup</type>
</CustomField>