Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Division</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Division)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_Key7</relationshipName>
    <type>Lookup</type>
</CustomField>