Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Group</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Sales Group)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_KeyGnJ7</relationshipName>
    <type>Lookup</type>
</CustomField>