Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Condition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Shipping Condition</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>DP SAP Foreign Key (Shipping Condition)</relationshipLabel>
    <relationshipName>DP_SAP_Foreign_KeyGnJW</relationshipName>
    <type>Lookup</type>
</CustomField>