Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Credit_Control_Area.recordType-meta.xml
<RecordType>
    <fullName>Credit_Control_Area</fullName>
    <active>true</active>
    <label>Credit Control Area</label>
</RecordType>