Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Cus_Group.recordType-meta.xml
<RecordType>
    <fullName>Cus_Group</fullName>
    <active>true</active>
    <label>Cus Group</label>
</RecordType>