Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Price_Group.recordType-meta.xml
<RecordType>
    <fullName>Price_Group</fullName>
    <active>true</active>
    <label>Price Group</label>
</RecordType>