Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Sales_Group.recordType-meta.xml
<RecordType>
    <fullName>Sales_Group</fullName>
    <active>true</active>
    <label>Sales Group</label>
</RecordType>