Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Sales_Office.recordType-meta.xml
<RecordType>
    <fullName>Sales_Office</fullName>
    <active>true</active>
    <label>Sales Office</label>
</RecordType>