Partial_14Dec2021/force-app/main/default/objects/DP_SAP_Foreign_Key__c/recordTypes/Sales_Organization.recordType-meta.xml
<RecordType>
    <fullName>Sales_Organization</fullName>
    <active>true</active>
    <label>Sales Organization</label>
</RecordType>